--- a/styles/customStyles.css
+++ b/styles/customStyles.css
@@ -36,3 +36,7 @@ input[type="number"]::-webkit-outer-spin-button {
   box-sizing: border-box;
   border-radius: 6px;
 }
+
+.grey-10 {
+  color: #b7becb;
+}
