--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,28 +4,34 @@
   background-position: right;
   background-size: auto 100%;
 }
+@media screen and (max-width: 768px) {
+  .hero {
+    background: none;
+  }
+}
 
+/* Our Features */
 .features {
   background-image: url(../public/assets/vectors/features-bg.svg);
   background-repeat: no-repeat;
   background-position-y: 30%;
 }
-
 .feature_item {
   width: 31.7%;
 }
-
-.token_item {
-  width: 18.5%;
-  background: linear-gradient(
-    102.08deg,
-    rgba(58, 72, 97, 0) 0%,
-    rgba(58, 72, 98, 0) 0.01%,
-    rgba(38, 105, 245, 0.5) 100%
-  );
-  backdrop-filter: blur(40px);
+@media screen and (max-width: 768px) {
+  .feature_item {
+    width: 100%;
+    margin-bottom: 1.125rem;
+  }
 }
 
+/* Tokenomics */
+.token_item {
+  width: 18.5%;
+}
+
+/* Governance */
 .governance {
   background: url(../public/assets/vectors/Sphere_gold.png);
   background-repeat: no-repeat;
@@ -51,7 +57,17 @@
   box-sizing: border-box;
   backdrop-filter: blur(40px);
 }
+@media screen and (max-width: 768px) {
+  .governance {
+    background: none;
+  }
+  .governance_left,
+  .governance_right {
+    width: 100%;
+  }
+}
 
+/* Lending & Borrowing */
 .lending_borrowing {
   background: url(../public/assets/vectors/circle.svg);
   background-repeat: no-repeat;
@@ -94,120 +110,43 @@
   );
   border: 1px solid rgba(38, 105, 245, 0.25);
 }
-
-/* .container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@media screen and (max-width: 768px) {
+  .lending_borrowing {
+    background: none;
   }
-} */
+  .lb_left {
+    width: 100%;
+  }
+}
+
+/* Why LFI */
+.why_img {
+  background: url(../public/assets/vectors/why-lfi.svg);
+  background-repeat: no-repeat;
+  width: 47.6%;
+}
+.why_content {
+  width: 47.6%;
+}
+.why_content li::before {
+  content: "";
+  left: 1rem;
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-image: url("../public/assets/images/list-bullet.svg");
+  background-size: contain;
+}
+@media screen and (max-width: 768px) {
+  .why_img,
+  .why_content {
+    width: 100%;
+  }
+}
+
+/* Timeline */
+.timeline_content {
+  min-height: 210px;
+  border-top-right-radius: 100px;
+  height: 240px;
+}
