--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap");
+
 body {
   font-family: "Inter", sans-serif;
 }
